--- a/Job Search/frontend/package.json
+++ b/Job Search/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "npm-upgrade": "^2.0.4",
     "parcel": "^1.12.4"
   },
   "devDependencies": {
